--- a/package.json
+++ b/package.json
@@ -13,37 +13,22 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.5.3",
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
     "browser-sync": "^2.18.1",
-    "browserify": "^13.1.1",
     "cssnano": "^3.8.0",
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.6.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-uglify": "^2.0.0",
+    "gulp-rollup": "^2.5.1",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-node-resolve": "^2.0.0"
   },
   "dependencies": {
     "getbasis": "^2.0.1",
-    "getbasis-card": "^1.0.1",
-    "getbasis-drawer": "^4.0.0",
-    "getbasis-hamburger-btn": "^2.0.0",
-    "getbasis-layout": "^6.0.1",
-    "getbasis-menu": "^3.0.0"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
-    ]
+    "getbasis-layout": "^6.0.1"
   },
   "scripts": {
     "gulp": "gulp"
