--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cssnano": "^3.9.1",
     "gulp": "^3.9.1",
     "gulp-ejs": "^2.3.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-rollup": "^2.5.1",
